# ESP32AntTest

./: .gitignore  AGENTS.md  LICENSE  README.md
docs/: ADR-001-rssi-method.md  ADR-002-protocol-stack.md  ADR-003-toolchain.md  ADR-004-beacon-sampling-and-host-tool.md  DEVENV.md  GLOSSARY.md  HARDWARE.md  HARDWARE.md.backup  SERIAL_PROTOCOL.md  SPEC.md
firmware/: NOTES.md
firmware/hwtest/: CMakeLists.txt  sdkconfig.defaults
firmware/hwtest/components/oled_text/: CMakeLists.txt
firmware/hwtest/components/oled_text/src/: font_5x7.h
firmware/hwtest/main/: CMakeLists.txt  board_config.h  main.c
firmware/mobile/: CMakeLists.txt  sdkconfig.defaults
firmware/mobile/main/: CMakeLists.txt  board_config.h  buffer.c  buffer.h  button.c  button.h  guide.c  guide.h  main.c  mrf.c  (+3 more)
firmware/shared/: CMakeLists.txt
firmware/shared/include/: config.h  protocol.h
firmware/shared/src/: protocol.c
firmware/station/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/station/main/: CMakeLists.txt  idf_component.yml  logger.c  logger.h  main.c  rf.c  rf.h  serial.c  serial.h  session.c  session.h
logs/: 20260709_064650_ceramic_orientation_z_45.csv  20260709_064650_ceramic_range_walk_5m.csv  20260709_064650_fpc_orientation_z_45.csv  20260709_064650_fpc_range_walk_5m.csv
profiles/: bad_antenna.json  good_antenna.json
protocols/: orientation_z.json  range_walk.json
tests/: Makefile  test_protocol.c
tools/: README.md  analyze.py  antTestServe.sh  mock_session.py  requirements.txt  serial_bridge.py  server.py
tools/static/: app.js  index.html  style.css
(+2 files in other folders)
